# random-projections

./: .gitignore  CLAUDE.md  README.md  calculate_formula.py  conftest.py  interactive_projection.py  polygon_projection.py  projection_sampling.py  requirements.txt  simple_square_boundary_test.py  test_average_distances.py  test_fallback_api.py  test_legacy_fallback.py  test_monte_carlo_basic.py  test_polygon_projection.py  test_updated.py  use_polygon.py
polygon-projection/: CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md
polygon-projection/docs/: BUILD_SYSTEM.md  api_overview.md  ui_migration.md
polygon-projection/examples/: basic_example.cpp  basic_usage.py  simple_full_example.cpp
polygon-projection/include/polygon_projection/: integration.h  polygon.h  projection.h  utils.h
polygon-projection/legacy/: piecewise_integration.py  polygon_projection.py
polygon-projection/python/: README_FALLBACK.md  build.py  pyproject.toml  setup.py  test_fallback.py
polygon-projection/python/polygon_projection/: __init__.py  api.py  fallback.py
polygon-projection/python/polygon_projection/legacy/: __init__.py  polygon_projection.py
polygon-projection/src/: boundary_projection.cpp  integration.cpp  interior_projection.cpp  polygon.cpp  projection.cpp  python_bindings.cpp  sampling.cpp  utils.cpp
polygon-projection/tests/api/: test_fallback_api.py  test_legacy_fallback.py
polygon-projection/tests/cpp/: CMakeLists.txt  analytical_comparison_tests.cpp  convexity_tests.cpp  diagonal_test.cpp  mass_test.cpp  performance_benchmark.cpp  performance_benchmark_tests.cpp  polygon_comparison_tests.cpp  polygon_tests.cpp  projection_test.cpp  projection_tests.cpp  simple_test.cpp
polygon-projection/tests/python/: README.md  convexity_test.py  test_analytical_comparison.py  test_performance.py  test_polygon_projection.py
random-projections/: CMakeLists.txt  README.md
random-projections/cpp/examples/: basic_example.cpp  simple_full_example.cpp
random-projections/cpp/include/: integration.h  polygon.h  projection.h  utils.h
random-projections/cpp/src/: boundary_projection.cpp  integration.cpp  interior_projection.cpp  polygon.cpp  projection.cpp  python_bindings.cpp  sampling.cpp  utils.cpp
random-projections/cpp/tests/: CMakeLists.txt  analytical_comparison_tests.cpp  convexity_tests.cpp  diagonal_test.cpp  mass_test.cpp  performance_benchmark.cpp  performance_benchmark_tests.cpp  polygon_comparison_tests.cpp  polygon_tests.cpp  projection_test.cpp  projection_tests.cpp  simple_test.cpp
random-projections/docs/: API_OVERVIEW.md  BUILD_SYSTEM_SUMMARY.md
random-projections/python/: requirements.txt  setup.py
random-projections/python/examples/: basic_usage.py  use_polygon.py
random-projections/python/projection/: __init__.py  api.py  fallback.py
random-projections/python/projection/legacy/: edge_projection.py  piecewise_integration.py  polygon_projection.py
random-projections/python/tests/: README.md  conftest.py  convexity_test.py  test_analytical_comparison.py  test_performance.py  test_polygon_projection.py
random-projections/python/tests/api/: test_fallback_api.py  test_legacy_fallback.py
random-projections/scripts/: build.py  update_cpp_includes.sh  update_python_imports.sh  update_python_tests.sh
tests/: calculate_correct_formula.py  compare_implementations.py  simple_square_test.py  test_analytical_vs_monte_carlo.py  test_monte_carlo_distances.py  verify_boundary_formula.py
